Implement BinaryFile class with spec
An amiga word is 2 octet and the spec use binary conversion in
expectation

--- a/.projections.json
+++ b/.projections.json
@@ -7,7 +7,14 @@
   "spec/component/*_spec.rb": {
     "alternate": "app/component/{}.rb",
     "type": "spec"
+  },
+  "lib/dr_mod_tracker/*.rb": {
+    "alternate": "spec/component/{}_spec.rb",
+    "type": "source"
+  },
+  "lib/dr_mod_tracker/*_spec.rb": {
+    "alternate": "app/component/{}.rb",
+    "type": "spec"
   }
-
 }
 
